Implement voice commands, map visualization, and incident reporting
Major Features Added:
- Voice command integration with speech recognition
- MapLibre/OpenStreetMap integration with incident markers
- Complete incident reporting screen with authentication
- User login/register screen with JWT support

Architecture:
- Added 20 Dart files with clean architecture (models, services, providers, screens, widgets)
- Implemented circular buffer video recording with 10-second segments
- Added SQLite database for local storage
- Integrated GPS tracking with real-time position updates
- Full REST API client with JWT authentication

New Features:
✅ Voice Commands - Say 'clip this' to save clips hands-free
✅ Interactive Maps - Real-time GPS with incident markers
✅ Incident Reporting - Full workflow from clip save to backend upload
✅ Authentication System - Login/register with secure token storage
✅ Three Display Modes - Webcam only, Split view, GPS only
✅ Circular Buffer - Continuous recording with automatic cleanup

Documentation:
- Updated README.md with comprehensive project overview
- Added IMPLEMENTATION_SUMMARY.md with architecture details
- Added FEATURE_IMPLEMENTATION.md with latest features
- Added QUICKSTART.md with developer guide

Progress: 10% → 85% Complete

Dependencies Added:
- speech_to_text, flutter_map, latlong2, sqflite, dio
- flutter_secure_storage, ffmpeg_kit_flutter, crypto

Ready for backend integration and production deployment.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    
+    <uses-feature android:name="android.hardware.camera" android:required="false"/>
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
+    
     <application
         android:label="dashcam_app"
         android:name="${applicationName}"
@@ -40,6 +52,9 @@
         <intent>
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
+        </intent>
+        <intent>
+            <action android:name="android.speech.RecognitionService"/>
         </intent>
     </queries>
 </manifest>
