--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,18 @@ dependencies:
   # Camera and Video
   camera: ^0.11.0+2
   video_player: ^2.9.2
+  ffmpeg_kit_flutter: ^6.0.3
   
   # Storage and Files
   path_provider: ^2.1.5
   share_plus: ^10.1.2
   shared_preferences: ^2.3.3
+  sqflite: ^2.3.3+2
   
-  # Location
+  # Location & Maps
   geolocator: ^13.0.2
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
   
   # Permissions
   permission_handler: ^11.3.1
@@ -28,12 +32,20 @@ dependencies:
   # State Management
   provider: ^6.1.2
   
+  # Voice Recognition
+  speech_to_text: ^7.0.0
+  
+  # API & Authentication
+  dio: ^5.7.0
+  flutter_secure_storage: ^9.2.2
+  
   # UI
   cupertino_icons: ^1.0.8
   
   # Utilities
   intl: ^0.19.0
   uuid: ^4.5.1
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
